--- a/rozwiazania.html
+++ b/rozwiazania.html
@@ -1,83 +1,101 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Rozwiązania — Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Inter', 'Lato', sans-serif; } </style>
+  <style> body { font-family: 'Inter','Lato', sans-serif; } </style>
 </head>
-<body class="bg-[#0A192F] text-white">
-
-  <!-- HEADER -->
-  <header class="flex items-center justify-between px-6 py-4 bg-[#0A192F]/90 fixed w-full top-0 z-50">
-    <div class="flex items-center space-x-3">
-      <img src="assets/svg/Logo main.svg" alt="BDI Logo" class="h-10">
-      <span class="text-xl font-bold">Baltic Digital Institute</span>
+<body class="bg-[#0A192F] text-white antialiased">
+  <!-- header -->
+  <header class="fixed w-full top-0 bg-[#0A192F]/90 z-50">
+    <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
+      <a href="index.html" class="flex items-center gap-3"><img src="assets/svg/Logo main.svg" class="h-10" alt="" /><span class="font-bold">Baltic Digital Institute</span></a>
+      <nav class="hidden md:flex gap-8">
+        <a href="index.html" class="hover:text-[#64FFDA]">Start</a>
+        <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
+        <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
+        <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
+      </nav>
+      <button id="menu-btn" class="md:hidden p-1 flex flex-col gap-1"><span class="block w-6 h-0.5 bg-white"></span><span class="block w-6 h-0.5 bg-white"></span><span class="block w-6 h-0.5 bg-white"></span></button>
     </div>
-    <nav class="hidden md:flex space-x-6 text-white font-medium">
-      <a href="index.html" class="hover:text-[#64FFDA]">Strona główna</a>
-      <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
-      <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
-      <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
-    </nav>
-    <button id="menu-btn" class="md:hidden flex flex-col space-y-1">
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-    </button>
+    <div id="mobile-menu" class="hidden md:hidden bg-[#0A192F]/95 text-center">
+      <a href="index.html" class="block px-6 py-3 hover:text-[#64FFDA]">Start</a>
+      <a href="o-nas.html" class="block px-6 py-3 hover:text-[#64FFDA]">O nas</a>
+      <a href="rozwiazania.html" class="block px-6 py-3 hover:text-[#64FFDA]">Rozwiązania</a>
+      <a href="kontakt.html" class="block px-6 py-3 hover:text-[#64FFDA]">Kontakt</a>
+    </div>
   </header>
 
-  <!-- MOBILE MENU -->
-  <div id="mobile-menu" class="hidden md:hidden fixed top-16 left-0 w-full bg-[#0A192F]/95 text-center space-y-4 py-6">
-    <a href="index.html" class="block text-lg hover:text-[#64FFDA]">Strona główna</a>
-    <a href="o-nas.html" class="block text-lg hover:text-[#64FFDA]">O nas</a>
-    <a href="rozwiazania.html" class="block text-lg hover:text-[#64FFDA]">Rozwiązania</a>
-    <a href="kontakt.html" class="block text-lg hover:text-[#64FFDA]">Kontakt</a>
-  </div>
+  <main class="pt-24">
+    <section class="py-12 text-center bg-[#0F2238]">
+      <div class="max-w-4xl mx-auto px-6">
+        <h1 class="text-4xl font-bold mb-4">Nasze rozwiązania</h1>
+        <p class="text-gray-300">Trzy filary: wdrożenia AI, badania & certyfikacja oraz programy edukacyjne. Poniżej szybki przegląd i lista zasobów, których potrzebujemy do pełnych stron usługowych.</p>
+      </div>
+    </section>
 
-  <!-- HERO -->
-  <section class="relative h-72 flex items-center justify-center text-center bg-[#0A192F]">
-    <h1 class="text-4xl md:text-5xl font-bold">Nasze Rozwiązania</h1>
-  </section>
+    <section class="py-12 max-w-6xl mx-auto px-6">
+      <div class="grid md:grid-cols-3 gap-8">
+        <!-- AI -->
+        <div class="p-6 bg-[#0A192F] rounded-xl shadow">
+          <h3 class="text-2xl font-bold text-[#64FFDA] mb-3">Wdrożenia AI</h3>
+          <p class="text-gray-300 mb-4">Projektowanie i wdrażanie rozwiązań opartych na modelach i agentach AI: od proof-of-concept po integrację produkcyjną.</p>
+          <h4 class="font-semibold mb-2">Co potrzeba do pełnej podstrony?</h4>
+          <ul class="text-sm text-gray-300 list-disc ml-5 space-y-1">
+            <li>Case study (opis projektu + mierzalne wyniki)</li>
+            <li>Ikony/diagramy architektury (WebP/SVG)</li>
+            <li>Lista technologii i stacku (ML, MLOps, infra)</li>
+            <li>Referencje klientów / krótkie cytaty</li>
+          </ul>
+        </div>
 
-  <!-- FILARY -->
-  <section class="py-20 px-6 max-w-6xl mx-auto grid md:grid-cols-3 gap-10">
-    <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg hover:scale-105 transition-transform">
-      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Sztuczna Inteligencja</h2>
-      <p class="text-gray-300 leading-relaxed text-sm">
-        Tworzymy rozwiązania oparte na AI, które wspierają biznes i sektor publiczny. 
-        Od analizy danych po modele uczenia maszynowego – wdrażamy praktyczne innowacje.
-      </p>
-    </div>
-    <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg hover:scale-105 transition-transform">
-      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Cyberbezpieczeństwo</h2>
-      <p class="text-gray-300 leading-relaxed text-sm">
-        Budujemy odporność cyfrową organizacji. 
-        Nasze programy i audyty pomagają chronić dane, procesy i infrastrukturę krytyczną.
-      </p>
-    </div>
-    <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg hover:scale-105 transition-transform">
-      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Transformacja Cyfrowa</h2>
-      <p class="text-gray-300 leading-relaxed text-sm">
-        Wspieramy instytucje w przechodzeniu na nowoczesne technologie. 
-        Łączymy wiedzę ekspercką i praktyczne doświadczenie w cyfrowej modernizacji.
-      </p>
-    </div>
-  </section>
+        <!-- Cyber -->
+        <div class="p-6 bg-[#0A192F] rounded-xl shadow">
+          <h3 class="text-2xl font-bold text-[#64FFDA] mb-3">Cyber Lab & Certyfikacja</h3>
+          <p class="text-gray-300 mb-4">Laboratorium testowe, audyty bezpieczeństwa oraz ścieżka do akredytacji i certyfikacji produktów.</p>
+          <h4 class="font-semibold mb-2">Co potrzeba do pełnej podstrony?</h4>
+          <ul class="text-sm text-gray-300 list-disc ml-5 space-y-1">
+            <li>Specyfikacja usług (audyt, pentest, certyfikacja)</li>
+            <li>Przykładowe raporty (redacted) / szablony</li>
+            <li>Loga standardów / PCA (gdzie to istotne)</li>
+            <li>Dowody kompetencji (publikacje, testy)</li>
+          </ul>
+        </div>
 
-  <!-- FOOTER -->
-  <footer class="bg-[#0A192F]/90 py-6 text-center text-gray-400 text-sm">
-    © 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.
+        <!-- Edukacja -->
+        <div class="p-6 bg-[#0A192F] rounded-xl shadow">
+          <h3 class="text-2xl font-bold text-[#64FFDA] mb-3">Edukacja i kompetencje</h3>
+          <p class="text-gray-300 mb-4">Kursy, szkolenia i programy grantowe — od podstaw do szkoleń specjalistycznych w BUR i online.</p>
+          <h4 class="font-semibold mb-2">Co potrzeba do pełnej podstrony?</h4>
+          <ul class="text-sm text-gray-300 list-disc ml-5 space-y-1">
+            <li>Oferta kursów (moduły, długość, certyfikaty)</li>
+            <li>Materiały promocyjne / sylabus</li>
+            <li>Testimoniale uczestników</li>
+            <li>Harmonogramy i CTA do zapisu</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="mt-10 text-center">
+        <p class="text-gray-300 mb-4">Na tej chwili szczegółowe strony usług będą uzupełnione po dostarczeniu powyższych materiałów — możesz wrzucać case studies i grafiki a ja podpię już gotowe sekcje.</p>
+        <a href="kontakt.html" class="inline-block px-6 py-3 bg-[#64FFDA] text-[#0A192F] rounded-md font-semibold hover:bg-[#52e0c5]">Umów konsultację</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="bg-[#0A192F]/95 py-8 text-gray-400 text-center">
+    <div class="max-w-6xl mx-auto px-6">
+      <p>© 2025 Baltic Digital Institute</p>
+    </div>
   </footer>
 
   <script>
     const menuBtn = document.getElementById('menu-btn');
     const mobileMenu = document.getElementById('mobile-menu');
-    menuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
+    menuBtn.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
   </script>
 </body>
 </html>
