--- a/kontakt.html
+++ b/kontakt.html
@@ -1,85 +1,64 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Kontakt — Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Inter', 'Lato', sans-serif; } </style>
+  <style> body { font-family: 'Inter','Lato', sans-serif; } </style>
 </head>
-<body class="bg-[#0A192F] text-white">
-
-  <!-- HEADER -->
-  <header class="flex items-center justify-between px-6 py-4 bg-[#0A192F]/90 fixed w-full top-0 z-50">
-    <div class="flex items-center space-x-3">
-      <img src="assets/svg/Logo main.svg" alt="BDI Logo" class="h-10">
-      <span class="text-xl font-bold">Baltic Digital Institute</span>
+<body class="bg-[#0A192F] text-white antialiased">
+  <header class="fixed top-0 left-0 right-0 bg-[#0A192F]/90 z-50">
+    <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
+      <a href="index.html" class="flex items-center gap-3"><img src="assets/svg/Logo main.svg" class="h-10" alt="" /><span class="font-bold">Baltic Digital Institute</span></a>
+      <nav class="hidden md:flex gap-8">
+        <a href="index.html" class="hover:text-[#64FFDA]">Start</a>
+        <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
+        <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
+        <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
+      </nav>
+      <button id="menu-btn" class="md:hidden p-1 flex flex-col gap-1"><span class="block w-6 h-0.5 bg-white"></span><span class="block w-6 h-0.5 bg-white"></span><span class="block w-6 h-0.5 bg-white"></span></button>
     </div>
-    <nav class="hidden md:flex space-x-6 text-white font-medium">
-      <a href="index.html" class="hover:text-[#64FFDA]">Strona główna</a>
-      <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
-      <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
-      <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
-    </nav>
-    <button id="menu-btn" class="md:hidden flex flex-col space-y-1">
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-    </button>
+    <div id="mobile-menu" class="hidden md:hidden bg-[#0A192F]/95 text-center">
+      <a href="index.html" class="block px-6 py-3 hover:text-[#64FFDA]">Start</a>
+      <a href="o-nas.html" class="block px-6 py-3 hover:text-[#64FFDA]">O nas</a>
+      <a href="rozwiazania.html" class="block px-6 py-3 hover:text-[#64FFDA]">Rozwiązania</a>
+      <a href="kontakt.html" class="block px-6 py-3 hover:text-[#64FFDA]">Kontakt</a>
+    </div>
   </header>
 
-  <!-- MOBILE MENU -->
-  <div id="mobile-menu" class="hidden md:hidden fixed top-16 left-0 w-full bg-[#0A192F]/95 text-center space-y-4 py-6">
-    <a href="index.html" class="block text-lg hover:text-[#64FFDA]">Strona główna</a>
-    <a href="o-nas.html" class="block text-lg hover:text-[#64FFDA]">O nas</a>
-    <a href="rozwiazania.html" class="block text-lg hover:text-[#64FFDA]">Rozwiązania</a>
-    <a href="kontakt.html" class="block text-lg hover:text-[#64FFDA]">Kontakt</a>
-  </div>
-
-  <!-- HERO -->
-  <section class="relative h-72 flex items-center justify-center text-center bg-[#0A192F]">
-    <h1 class="text-4xl md:text-5xl font-bold">Skontaktuj się z nami</h1>
-  </section>
-
-  <!-- FORMULARZ -->
-  <section class="py-20 px-6 max-w-3xl mx-auto">
-    <form action="mailto:kontakt@twojadomena.pl" method="POST" enctype="text/plain" class="space-y-6 bg-[#0F2238] p-8 rounded-xl shadow-lg">
-      <div>
-        <label for="name" class="block text-sm font-medium mb-2">Imię i nazwisko</label>
-        <input type="text" id="name" name="name" required class="w-full p-3 rounded-md bg-[#0A192F] text-white border border-gray-600 focus:outline-none focus:border-[#64FFDA]">
+  <main class="pt-24">
+    <section class="py-12 text-center bg-[#0F2238]">
+      <div class="max-w-4xl mx-auto px-6">
+        <h1 class="text-4xl font-bold mb-4">Kontakt</h1>
+        <p class="text-gray-300 mb-6">Masz pytanie? Wypełnij formularz kontaktowy poniżej — otrzymasz powiadomienie e-mail zgodnie z ustawieniami Google Forms.</p>
       </div>
-      <div>
-        <label for="email" class="block text-sm font-medium mb-2">Adres e-mail</label>
-        <input type="email" id="email" name="email" required class="w-full p-3 rounded-md bg-[#0A192F] text-white border border-gray-600 focus:outline-none focus:border-[#64FFDA]">
-      </div>
-      <div>
-        <label for="message" class="block text-sm font-medium mb-2">Wiadomość</label>
-        <textarea id="message" name="message" rows="4" required class="w-full p-3 rounded-md bg-[#0A192F] text-white border border-gray-600 focus:outline-none focus:border-[#64FFDA]"></textarea>
-      </div>
-      <button type="submit" class="w-full py-3 px-6 bg-[#64FFDA] text-[#0A192F] font-bold rounded-md hover:bg-[#52e0c5] transition">
-        Wyślij wiadomość
-      </button>
-    </form>
+    </section>
 
-    <div class="text-center mt-12 text-gray-300">
-      <p><strong>Adres biura:</strong></p>
-      <p>ul. Hołdu Pruskiego 6, 80-741 Gdańsk</p>
-      <p class="mt-2">📧 kontakt@twojadomena.pl</p>
+    <section class="max-w-5xl mx-auto px-6 py-12">
+      <!-- Google Form (embed) -->
+      <div class="bg-[#0A192F] rounded-xl p-4 shadow">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdxBdozm1NwBgaxoBVKHq1TcmwgR9sHYaQH_vp3yaFeN_HUGg/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Ładuję…</iframe>
+      </div>
+
+      <div class="mt-8 text-gray-300 text-center">
+        <p>Alternatywnie: <a href="mailto:kontakt@baltic-digital.org" class="text-[#64FFDA] hover:underline">napisz do nas e-mail</a></p>
+        <p class="mt-4 text-sm">Adres biura: ul. Hołdu Pruskiego 6, 80-741 Gdańsk</p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="bg-[#0A192F]/95 py-8 text-gray-400 text-center">
+    <div class="max-w-6xl mx-auto px-6">
+      <p>© 2025 Baltic Digital Institute</p>
     </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="bg-[#0A192F]/90 py-6 text-center text-gray-400 text-sm">
-    © 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.
   </footer>
 
   <script>
     const menuBtn = document.getElementById('menu-btn');
     const mobileMenu = document.getElementById('mobile-menu');
-    menuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
+    menuBtn.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
   </script>
 </body>
 </html>
